--- a/style/sass/layouts/_home.scss
+++ b/style/sass/layouts/_home.scss
@@ -239,7 +239,19 @@
         #contact {
             height: 100vh;
         }
-    }//end of #contact mobile styles
+    }
+
+    @media (max-width: 419px ) {
+
+        #contact {
+        
+            .fs-subheading {
+                font-size: 1rem;
+            }
+        }
+    }
+    
+    //end of #contact mobile styles
 
     footer {
 
